--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.13",
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/cli-doctor": "^13.6.4",
+    "@react-navigation/bottom-tabs": "^6.5.14",
+    "@react-navigation/material-bottom-tabs": "^6.2.22",
+    "@react-navigation/native": "^6.1.12",
+    "@react-navigation/stack": "^6.3.23",
+    "deprecated-react-native-prop-types": "^5.0.0",
+    "expo": "~50.0.6",
+    "expo-barcode-scanner": "12.9.3",
+    "expo-camera": "14.1.2",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "2.14.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
